--- a/Frontend/src/components/forms/simpleEstilo.css
+++ b/Frontend/src/components/forms/simpleEstilo.css
@@ -95,11 +95,11 @@
     cursor: pointer;
   }
 
-  button[type="submit"]:hover {
+  button:hover {
     background-color: #0069d9;
   }
 
-  button[type="submit"]:active {
+  button:active {
     box-shadow:  1px 1px 2px rgba(0, 0, 0, 0.2); /* Agrega una sombra interna al botón al hacer clic */
 }
 
