--- a/Frontend/src/components/PopsStyle/StyleUserList.css
+++ b/Frontend/src/components/PopsStyle/StyleUserList.css
@@ -1,11 +1,15 @@
+.user_list_ul{
+  margin-left: -30px;
+}
+
 .user {
-    max-width: 700px;
+    max-width: 500px;
     display: grid;
-    grid-template-columns: auto 1fr auto auto;
+    grid-template-columns: auto 1fr 55px 70px;
     align-items: center;
-    gap: 10px;
+
     padding: 10px;
-    margin: 10px;
+    margin: 5px;
     background-color: #e7e2e2;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -14,7 +18,6 @@
   .container-avatar-active {
     width: 90px; 
     height: 90px;
-    background-color: #ddd;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -36,12 +39,16 @@
   
   h2 {
     margin: 0;
+    padding-left: 10px;
     font-size: 1.2rem;
   }
   
   p {
-    margin: 5px 0;
+    margin: 0;
+    padding-left: 10px;
     font-size: 0.9rem;
+    font-style: italic;
+    
   }
 
   
@@ -51,5 +58,11 @@
   
   .container-avatar-active.inactive {
     background-color: #ee3933; /* Rojo si el usuario está inactivo */
+  }
+
+  @media screen and (max-width: 500px) {
+    h2 {
+      font-size: 1rem;}
+    
   }
   
