--- a/Frontend/src/components/PagesComponents/User/UserInfoButtonStyle.css
+++ b/Frontend/src/components/PagesComponents/User/UserInfoButtonStyle.css
@@ -47,8 +47,8 @@
   }
 
   .container-avatar-active-inside {
-    width: 120px; 
-    height: 120px;
+    width: 140px; 
+    height: 140px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -63,6 +63,12 @@
     border-radius: 50%;
     scale: 0.95;
   }
+
+  .container-details {
+    text-align: justify;
+    padding: 0 50px;
+  }
+
 
   .container-avatar-active-inside.active {
     background-color: #5deb5d; /* Verde si el usuario está activo */
