--- a/Frontend/src/components/PopsStyle/StyleUserList.css
+++ b/Frontend/src/components/PopsStyle/StyleUserList.css
@@ -1,68 +1,107 @@
-.user_list_ul{
+.user_list_ul {
   margin-left: -30px;
 }
 
 .user {
-    max-width: 500px;
-    display: grid;
-    grid-template-columns: auto 1fr 55px 70px;
-    align-items: center;
+  max-width: 500px;
+  max-height: 150px;
 
-    padding: 10px;
-    margin: 5px;
-    background-color: #e7e2e2;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  }
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: 1fr 55px;
+  grid-template-areas:
+    "avatar details"
+    "avatar actions";
+  align-items: center;
+  padding: 10px 20px;
+  margin: 5px;
+  background-color: #e7e2e2;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  position: relative; /* Agregar posición relativa para poder posicionar correctamente el pseudo-elemento */
+}
+
+.container-avatar-active {
+  grid-area: avatar;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.avatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  transform: scale(0.95); /* Reducir el tamaño del avatar */
+}
+
+.details {
+  grid-area: details; /* Corrección de ortografía */
+  flex: 1;
+  padding: 0 30px;
+}
+
+.actions {
+  grid-area: actions;
+  margin-top: -10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  opacity: 0.9;
+}
+
+h2 {
+  margin: 0;
+  font-size: 1.3rem;
+}
+
+p {
+  margin: 0;
+  font-size: 1rem;}
+
+.userName {
+  margin: 0;
+  padding-left: 20px; 
+  font-size: 1.3rem;
+}
+
+.role {
+  margin: 0;
+  padding-left: 22px;
+  padding-bottom: 15px;
+  font-size: 1rem;
+  font-style: italic;
+  opacity: 0.5;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.container-avatar-active.active {
+  background-color: #5deb5d;
+}
+
+.container-avatar-active.inactive {
+  background-color: #ee3933; /* Rojo si el usuario está inactivo */
+}
+
+@media screen and (max-width: 500px) {
   
   .container-avatar-active {
-    width: 90px; 
+    width: 90px;
     height: 90px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
   }
-  
-  .avatar {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    scale: 0.95;
-  }
-  
-  .details {
-    flex: 1;
+
+  .userName {
     padding-left: 10px;
+    font-size: 1rem;
   }
-  
-  h2 {
-    margin: 0;
-    padding-left: 10px;
-    font-size: 1.2rem;
-  }
-  
-  p {
-    margin: 0;
-    padding-left: 10px;
+
+  .role {
+    padding-left: 12px;
     font-size: 0.9rem;
-    font-style: italic;
-    
   }
+}
 
-  
-  .container-avatar-active.active {
-    background-color: #5deb5d; /* Verde si el usuario está activo */
-  }
-  
-  .container-avatar-active.inactive {
-    background-color: #ee3933; /* Rojo si el usuario está inactivo */
-  }
-
-  @media screen and (max-width: 500px) {
-    h2 {
-      font-size: 1rem;}
-    
-  }
-  
