--- a/Frontend/src/components/buttons/DeleteButtons/SimpleDeleteButtonStyle.css
+++ b/Frontend/src/components/buttons/DeleteButtons/SimpleDeleteButtonStyle.css
@@ -1,4 +1,4 @@
-/* .bin-button {
+.bin-button {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,9 +6,9 @@
   width: 55px;
   height: 55px;
   border-radius: 50%;
-  background-color: rgb(255, 95, 95);
+  background-color:transparent;
   cursor: pointer;
-  border: 2px solid rgb(255, 201, 201);
+
   transition-duration: 0.3s;
   position: relative;
   overflow: hidden;
@@ -26,9 +26,7 @@
 .bin-button:hover .bin-top {
   transform: rotate(45deg);
 }
-.bin-button:hover {
-  background-color: rgb(255, 0, 0);
-}
+
 .bin-button:active {
   transform: scale(0.9);
 }
@@ -52,4 +50,4 @@
     transform: translate(0%, 0%);
     opacity: 1;
   }
-} */
+}
