--- a/Frontend/src/components/buttons/StyleProfileButton.css
+++ b/Frontend/src/components/buttons/StyleProfileButton.css
@@ -2,10 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
+    width: 52px;
+    height: 52px;
     overflow: hidden;
-    background-color:  #e7e2e2;
+    background-color:  transparent;
     padding: 15px;
     border-radius: 50%;
     cursor: pointer;
