--- a/Frontend/src/components/PopsStyle/StyleUserList.css
+++ b/Frontend/src/components/PopsStyle/StyleUserList.css
@@ -1,5 +1,5 @@
 .user_list_ul {
-  margin-left: -30px;
+  margin: 20px;
 }
 
 .user {
@@ -14,10 +14,10 @@
     "avatar actions";
   align-items: center;
   padding: 10px 20px;
-  margin: 5px;
-  background-color: #e7e2e2;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  margin: 10px 0;
+  background-color: #ffffff;
+
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   position: relative; /* Agregar posición relativa para poder posicionar correctamente el pseudo-elemento */
 }
 
@@ -76,7 +76,7 @@ p {
   font-size: 1rem;
   font-style: italic;
   opacity: 0.5;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .container-avatar-active.active {
