--- a/Frontend/src/components/NavBar/NavBar.css
+++ b/Frontend/src/components/NavBar/NavBar.css
@@ -1,196 +1,274 @@
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .body-wrapper {
-    height: 100vh;
-    background-color: #e4e3e8;
-    position: relative;
+  height: 100vh;
+  background-color: #e4e3e8;
+  position: relative;
 }
 
 .toggle-btn,
 a {
- 
-    cursor: pointer;
+  cursor: pointer;
 }
 
-
 .sidebar-bottom {
-    width: 5rem;
-    min-height: 100vh; 
-    background-color: #14214E;
-    display: flex;
-    flex-direction: column;
-    transition: width 500ms ease;
+  width: 3.5rem;
+  min-height: 100vh;
+  height: 100%;
+  background-color: #14214E;
+  display: flex;
+  flex-direction: column;
+  transition: width 500ms ease;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .sidebar-bottom.active {
-    width: 15rem;
+  width: 13rem;
 }
 
 .sidebar-header,
 .sidebar-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;    
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar-header {
-    margin-bottom: 1rem;
+  height: 70px;
+  padding: 2px 0;
+  transition: all 0.3s ease;
 }
 
 .logo-wrapper {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    gap: 1.25rem;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 1.25rem;
+
 }
+
+.sidebar-bottom.active .logo-wrapper {
+    width: 195px;
+}
+
 
 .logo-wrapper > .iconSidebar {
-    width: 3.25rem;
-    height: 3.25rem;
-
-    padding: 0.4rem;
-    border-radius: 0.5rem;
+  width: 3.25rem;
+  height: 3.25rem;
+  padding: 0.4rem;
+  border-radius: 0.5rem;
 }
 
-link, .hidden {
-    list-style: none;
-    text-decoration: none;
+.iconSidebar {
+  justify-content: start;
 }
 
-link:hover {
-    text-decoration: none;
+.linkPage,
+.hidden {
+  list-style: none;
+  text-decoration: none;
 }
 
+.linkPage:hover {
+  text-decoration: none;
+}
 
 .sidebar-links {
-    flex-direction: column;
-    margin-bottom: auto;
-    gap: 0.6rem;
-    padding-top: 1.5rem;
+  flex-direction: column;
+  margin-bottom: auto;
+  gap: 0.2rem;
+  padding-top: 1.5rem;
 }
 
 .sidebar-bottom > .sidebar-links {
-    border-top: 1px solid rgb(211, 211, 211);
+  border-top: 1px solid rgb(211, 211, 211);
 }
 
 .sidebar-bottom.active .sidebar-links,
 .sidebar-bottom.active .sidebar-header,
 .sidebar-bottom.active .user-profile {
-    justify-content: start;
-    align-items: stretch;
+  justify-content: start;
 }
 
-h2.hidden {
-    display: none;
+.logo-wrapper,
+.logo-wrapper:hover {
+  text-decoration: none;
 }
+
+
 
 .linkPage {
-    display: flex;
-    padding: 0.6rem;
-    border-radius: 0.5rem;
-    gap: 1.5rem;
-    text-decoration: none;
-    color: white; 
+  display: flex;
+  justify-content: start;
+  width: 100%;
+  padding: 0.6rem;
+  gap: 1.5rem;
+  text-decoration: none;
+  color: white;
 }
 
 .hidden {
-    display: none;
-    color: white;
+  display: none;
+  color: white;
 }
 
 .sidebar-bottom.active .hidden {
-    display: inline;
+  display: inline;
 }
 
-.linkPage:hover,
-.linkPage.active:hover {
-    background-color: #053b7d;
-    text-decoration: none; /* Eliminamos el subrayado al pasar el mouse sobre los enlaces */
+.linkPage:hover {
+  filter: drop-shadow(0px 0px 10px #fff);
+  transition: background-color 500ms ease;
+
 }
 
 .linkPage.active {
-    background-color: #003E8B;
-    text-decoration: none; /* Eliminamos el subrayado de los enlaces activos */
+  border-left: 3px solid #fff;
+  transition: background-color 500ms ease;
 }
 
 .linkPage > .iconSidebar {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 .profileBar {
-    background-color: transparent;
-    border: none;
+  background-color: transparent;
+  border: none;
 }
 
 .sidebar-bottom .sidebar-links {
-    padding-bottom: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .toggle-btn {
-    position: absolute;
-    top: 10px;
-    right: -50px;
-    padding: 0.5rem;
-    background-color: #14214E;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.25s ease;
+  position: absolute;
+  right: -50px;
+  padding: 0.5rem;
+  background-color: #14214E;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
 }
 
 .sidebar-bottom.active .toggle-btn {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
-.user-profile {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5rem;
-    padding-top: 1.5rem;
-    border-top: 1px solid rgb(211, 211, 211);
+/* Definimos la animación de entrada */
+@keyframes slideIn {
+    0% {
+      opacity: 0;
+      transform: translateX(-100%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    }
 }
 
-.user-avatar {
-    width: 48px;
-    height: 48px;
-    cursor: pointer;
-    transition: scale 0.2s ease;
+/* Definimos la animación de salida */
+@keyframes slideOut {
+    0% {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    100% {
+      opacity: 0;
+      transform: translateX(-100%);
+    }
 }
 
-.user-avatar .iconSidebar {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
+#logC {
+    position: absolute;
+    right: 5px;
+    width: 44px;
+    height: 43px;
+    transition: all 0.3s ease;
 }
 
-.user-avatar:hover {
-    scale: 1.1;
+#Logo_cosmic_blanco {
+    position: absolute;
+    z-index: 1;
+    width: 233px;
+    height: 49px;
+    display: none;
+    color: #ffffff;
+    transform: translateX(-100%);
+    animation: slideIn 0.6s forwards;
 }
 
-.user-details {
-    align-self: center;
-    overflow: hidden;
+.sidebar-bottom.active #Logo_cosmic_blanco {
+    position: relative;
+    z-index: 1;
+    width: 233px;
+    height: 49px;
+    display: block;
+    color: #ffffff;
+    transition: opacity 0.3s ease, transform 0.3s ease; 
+    opacity: 1;
+    visibility: visible; 
+    transform: translateX(0); 
+    animation: slideIn 0.6s forwards; /* Animación de entrada */
 }
 
-.user-details .username {
-    font-size: 0.85rem;
-    font-weight: 600;
+.sidebar-bottom.inactive #Logo_cosmic_blanco {
+    animation: slideOut 0.6s forwards; /* Animación de salida */
 }
 
-.user-details .user-email {
-    font-size: 0.8rem;
-}
 
-.crm {
-    background-color: transparent;
-}
+
+ /* RESPONSIVE */
+
+ @media screen and (min-width: 600px) {
+    .sidebar-bottom {
+      width: 5rem;
+    }
+  
+    .sidebar-bottom.active {
+      width: 17rem;
+    }
+  
+    .sidebar-header {
+      height: 80px;
+      padding: 10px 0;
+      transition: all 0.3s ease;
+    }
+  
+    .logo-wrapper > .iconSidebar {
+      width: 3.25rem;
+      height: 3.25rem;
+    }
+  
+    .linkPage {
+      padding: 0.5rem 1.75rem;
+    }
+  
+    .hidden {
+      display: none;
+    }
+    
+    #logC {
+        width: 55px;
+        height: 55px;
+    }
+
+    #Logo_cosmic_blanco {
+        scale: 1.35;
+        translate: 35px 0 ;
+    
+    }
+
+    .toggle-btn {
+        top: 15px;
+        transition: all 0.3s ease;
+      }
+  }
