--- a/Frontend/src/components/PopsStyle/ListStyleGeneric.css
+++ b/Frontend/src/components/PopsStyle/ListStyleGeneric.css
@@ -1,27 +1,18 @@
-/* Para cada elemento de la lista */
+/* 
 li {list-style: none}
 
 .generic_list{
-    /* display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
-    justify-content: justify; */
+
     margin: 20px;
 
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200, 1fr));
-  grid-gap: 10px; /* Espacio entre elementos */
+  grid-gap: 10px; 
     
 }
 
-/* .generic_list > * {
-  
-} */
 
 .element {
-    /* max-width: 500px;
-  max-height: 150px; */
-  
 
   display: flex;
   flex-direction: column;
@@ -70,4 +61,4 @@ li {list-style: none}
     position: absolute;
     top: 0;
     right: 0;
-}
+} */
