--- a/Frontend/src/components/PopsStyle/listStyle.css
+++ b/Frontend/src/components/PopsStyle/listStyle.css
@@ -1,4 +1,4 @@
-/* Estilo para la lista de visitas */
+/* 
 .visit_list {
     display: flex;
     flex-wrap: wrap;
@@ -7,7 +7,7 @@
     
   }
   
-  /* Estilo para cada elemento de la lista */
+
   .visist {
     width: 100vh;
     background-color: #f2f2f2;
@@ -20,13 +20,11 @@
     padding: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
-    width: calc(33.33% - 10px); /* Ajusta el ancho para mostrar tres elementos por fila */
+    width: calc(33.33% - 10px);
   }
-  
-  /* Estilo para los botones */
-  .visist > div {
+
+ .visist > div {
     width: 100vh;
     display: flex;
     align-items: center;
-  }
-  
+  }  */
