--- a/Frontend/src/components/buttons/StyleEditButton.css
+++ b/Frontend/src/components/buttons/StyleEditButton.css
@@ -3,11 +3,10 @@
     height: 55px;
     border-radius: 20px;
     border: none;
-    background-color: rgb(93, 93, 116);
+    background-color: transparent;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.123);
     cursor: pointer;
     position: relative;
     overflow: hidden;
@@ -17,7 +16,6 @@
     content: "";
     width: 200%;
     height: 200%;
-    background-color: rgb(102, 102, 141);
     position: absolute;
     z-index: 1;
     transform: scale(0);
@@ -26,15 +24,13 @@
     filter: blur(10px);
   }
   .editBtn:hover::before {
-    transform: scale(1);
+    transform: scale(1.1);
   }
-  .editBtn:hover {
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.336);
-  }
+
   
   .editBtn svg {
     height: 17px;
-    fill: white;
+    fill: grey;
     z-index: 3;
     transition: all 0.2s;
     transform-origin: bottom;
@@ -49,7 +45,7 @@
     position: absolute;
     bottom: 19px;
     left: -5px;
-    background-color: white;
+    background-color: grey;
     border-radius: 2px;
     z-index: 2;
     transform: scaleX(0);
