--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,9 +1,17 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 main.dark {
-  background-color: rgb(0, 0, 0);
+  background-color: #333333;
   color: #ffffff;
 }
 main.light {
-  background-color: rgb(255, 255, 255);
+  background-color: #f0f0f6;
   color: rgb(12, 12, 12);
   border: #ffffff;
 }
