--- a/Frontend/src/components/Header/Header.css
+++ b/Frontend/src/components/Header/Header.css
@@ -1,10 +1,10 @@
 .header-container {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #ffffff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: rgba(209, 209, 209, 0.5);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 @media screen and (min-width: 600px) {
