--- a/Frontend/src/Styles/Pages/StyleUserList.css
+++ b/Frontend/src/Styles/Pages/StyleUserList.css
@@ -66,7 +66,6 @@
 }
 
 .role {
-
   font-size: 0.8rem;
   font-style: italic;
   opacity: 0.5;
@@ -84,15 +83,56 @@
 }
 
 
+@media screen and (min-width: 480px) {
+  .element_user_container {
+    max-height: 150px;
+    grid-template-columns: 120px 1fr;
+  }
+
+  .container-avatar-active {
+    top: 15px;
+    width: 110px;
+    height: 110px;
+  }
+  
+  .userName {
+    font-size: 1.2rem;
+  }
+  
+  .role {
+    font-size: 0.9rem;
+    width: 220px;
+  }
+
+}
+
 
 
 @media screen and (min-width: 550px) {
+  .element_user_container {
+    max-height: 170px;
+    grid-template-columns: 140px 1fr;
+  }
+
+  .container-avatar-active {
+    top: 10px;
+    left: 20px;
+    width: 120px;
+    height: 120px;
+  }
   
+  .userName {
+    font-size: 1.3rem;
+  }
+  
+  .role {
+    margin-top: 5px;
+    font-size: 1rem;
+    width: 300px;
+  }
+
 
 }
 
-@media screen and (min-width: 480px) {
-  
 
-}
 
