--- a/Frontend/src/components/Header/Header.css
+++ b/Frontend/src/components/Header/Header.css
@@ -4,8 +4,14 @@
   align-items: center;
   padding: 10px 20px;
   background-color: rgba(209, 209, 209, 0.5);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
 }
+
+.profileNavContainer {
+  margin-right: 10px;
+  justify-content: end;
+}
+
 
 @media screen and (min-width: 600px) {
 }
