--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -14,3 +14,8 @@ main.light {
   background-color: #f0f0f6;
   color: rgb(12, 12, 12);
 }
+
+body {
+  font-family: 'Montserrat', sans-serif;
+                                                
+}
