--- a/Frontend/src/Styles/Pages/StyleUserList.css
+++ b/Frontend/src/Styles/Pages/StyleUserList.css
@@ -1,13 +1,9 @@
-.user_container {
-  margin: 15px;
-}
-
-.element_user_container {
+#element_user_container {
   max-width: 500px;
   min-width: 310px;
   max-height: 140px;
   display: grid;
-  grid-template-columns: 100px 1fr;
+  grid-template-columns: 90px 1fr;
   grid-template-rows: 1fr 55px;
   grid-template-areas:
     "avatar details"
@@ -70,7 +66,7 @@
   font-style: italic;
   opacity: 0.5;
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  width: 170px;
+  width: 190px;
   padding-bottom: 10px;
 }
 
@@ -84,7 +80,7 @@
 
 
 @media screen and (min-width: 480px) {
-  .element_user_container {
+  #element_user_container {
     max-height: 150px;
     grid-template-columns: 120px 1fr;
   }
@@ -109,7 +105,7 @@
 
 
 @media screen and (min-width: 550px) {
-  .element_user_container {
+  #element_user_container {
     max-height: 170px;
     grid-template-columns: 140px 1fr;
   }
