--- a/Frontend/src/Styles/Pages/StyleUserList.css
+++ b/Frontend/src/Styles/Pages/StyleUserList.css
@@ -6,13 +6,13 @@
   grid-template-columns: 90px 1fr;
   grid-template-rows: 1fr 55px;
   grid-template-areas:
-    "avatar details"
-    "avatar actions";
+    'avatar details'
+    'avatar actions';
   align-items: center;
   padding: 5px 0;
   margin: 10px 0;
   border-radius: 8px;
-  background-color: #ffffff;
+
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
   position: relative;
 }
@@ -33,7 +33,6 @@
   scale: 0.9;
 }
 
-
 .container-avatar-active {
   grid-area: avatar;
   position: absolute;
@@ -53,7 +52,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  transform: scale(0.95); 
+  transform: scale(0.95);
 }
 
 .userName {
@@ -78,7 +77,6 @@
   background-color: #ee3933;
 }
 
-
 @media screen and (min-width: 480px) {
   #element_user_container {
     max-height: 150px;
@@ -90,19 +88,16 @@
     width: 110px;
     height: 110px;
   }
-  
+
   .userName {
     font-size: 1.2rem;
   }
-  
+
   .role {
     font-size: 0.9rem;
     width: 220px;
   }
-
 }
-
-
 
 @media screen and (min-width: 550px) {
   #element_user_container {
@@ -116,19 +111,14 @@
     width: 120px;
     height: 120px;
   }
-  
+
   .userName {
     font-size: 1.3rem;
   }
-  
+
   .role {
     margin-top: 5px;
     font-size: 1rem;
     width: 300px;
   }
-
-
 }
-
-
-
