--- a/Frontend/src/layout/mainLayout.css
+++ b/Frontend/src/layout/mainLayout.css
@@ -25,6 +25,19 @@
   overflow: auto;
 }
 
+.main-layout-container #dark {
+  background-color: #333333;
+  color: #ffffff;
+  border: #ffffff;
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.944);
+}
+.main-layout-container #light {
+  background-color: #f0f0f6;
+  color: rgb(12, 12, 12);
+  border: #2b2a2a;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+}
+
 @media screen and (min-width: 600px) {
   .main-layout-container {
     grid-template-rows: 81px 1fr;
