--- a/Frontend/src/Styles/Pages/GeneralFroms.css
+++ b/Frontend/src/Styles/Pages/GeneralFroms.css
@@ -1,5 +1,5 @@
 .mainContainer {
-  margin: 10px 15px;
+  padding: 10px 15px;
 }
 
 .mainTitle {
@@ -10,6 +10,7 @@
 
 .main_olist {
   list-style-type: none;
+  
 }
 
 .main_ilist {
@@ -18,7 +19,7 @@
   padding: 10px 15px;
   margin: 10px 0;
   border-radius: 8px;
-
+  background-color: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 
   display: flex;
@@ -36,4 +37,22 @@
 
 .main_ilist > p {
   font-size: 0.8rem;
+}
+
+.mainCreateBtn {
+  font-size: 1rem;
+  padding: 5px 10px;
+}
+
+.mainUpdateBtn {
+  width: auto;
+  height: 32px;
+  font-size: 1rem;
+  padding: 5px 10px;
+}
+
+.main_actions {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
