--- a/Frontend/src/Styles/Pages/GeneralFroms.css
+++ b/Frontend/src/Styles/Pages/GeneralFroms.css
@@ -10,21 +10,16 @@
 
 .main_olist {
   list-style-type: none;
-  
 }
 
 .main_ilist {
   max-width: 500px;
-
   padding: 10px 15px;
-  margin: 10px 0;
-  border-radius: 8px;
+  margin: 10px 0 15px 0;
   background-color: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
-
   display: flex;
   flex-direction: column;
-  gap: 10px;
 }
 
 .main_ilist > h2 {
