--- a/Frontend/src/components/buttons/DeleteButtons/SimpleDeleteButtonStyle.css
+++ b/Frontend/src/components/buttons/DeleteButtons/SimpleDeleteButtonStyle.css
@@ -8,7 +8,7 @@
   border-radius: 50%;
   background-color:transparent;
   cursor: pointer;
-
+  border: none;
   transition-duration: 0.3s;
   position: relative;
   overflow: hidden;
