--- a/Frontend/src/components/buttons/Profile/StyleProfileButton.css
+++ b/Frontend/src/components/buttons/Profile/StyleProfileButton.css
@@ -4,16 +4,15 @@
     justify-content: center;
     width: 52px;
     height: 52px;
-    overflow: hidden;
     background-color:  transparent;
+    border: none;
     padding: 15px;
-    border-radius: 50%;
     cursor: pointer;
-    text-decoration: none;
-    transition:  0.5s ease;
+    transition: all 0.3s ease;
   }
   .tab:hover {
-    scale: 1.3;
-    color:  #252121;
+    width: 56px;
+    height: 56px;
+    transition: all 0.3s ease;
   }
   
