--- a/Frontend/src/Styles/Pages/StyleUserList.css
+++ b/Frontend/src/Styles/Pages/StyleUserList.css
@@ -1,31 +1,63 @@
-#element_user_container {
 
+ #element_user_container {
+  max-width: 320px;
+  max-height: 200px;
+  min-width: 200px;
+  display: grid;
+  grid-template-columns: 100px  1fr;
+  align-items: center;
+  margin: 15px 10px 15px 0;
+  padding: 0 5px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+} 
 
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+.container-details-actions {
+  display: grid;
+  grid-template-rows: 1fr 35px;
 }
 
+
 .details {
-  padding: 10px 0 15px 20px;
+  min-height: 60px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 10px;
+}
+
+.details::before,
+.details::after {
+  content: "";
+  position: absolute;
+  bottom: 0; 
+  left: 5%;
+  width: 90%;
+  height: 1px;
+  background-color: #ccc; 
+  opacity: 0.3;
 }
 
 .actions {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   opacity: 0.9;
-  scale: 0.9;
+
 }
 
-.container-avatar-active {
-
-  width: 90px;
-  height: 90px;
-  border-radius: 50%;
+ .container-avatar-active {
+  width: 75px;
+  height: 75px;
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 50%;
+  margin: 15px 10px 15px 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
 
 .avatar {
@@ -33,20 +65,16 @@
   height: 100%;
   border-radius: 50%;
   transform: scale(0.95);
-}
+} 
 
 .userName {
-  padding-top: 10px;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 .role {
-  font-size: 0.8rem;
+  font-size: 0.6rem;
   font-style: italic;
   opacity: 0.5;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  width: 190px;
-  padding-bottom: 10px;
 }
 
 .container-avatar-active.active {
@@ -57,18 +85,52 @@
   background-color: #ee3933;
 }
 
+@media screen and (max-width: 390px) {
+  #element_user_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .container-avatar-active {
+    display: none;
+  }
+
+  .avatar {
+    display: none;
+  }
+  
+  .details {
+    min-width: 200px; ;
+  }
+
+  
+  .userName {
+    width: 200px;
+    font-size: 0.9rem;
+  }
+}
+ 
+
+
 @media screen and (min-width: 480px) {
   #element_user_container {
+    max-width: 420px;
     max-height: 150px;
   }
 
   .container-avatar-active {
-    width: 110px;
-    height: 110px;
+    width: 90px;
+    height: 90px;
+  }
+
+  .details {
+    margin-left: 12px;
   }
 
   .userName {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 
   .role {
@@ -77,24 +139,42 @@
   }
 }
 
-@media screen and (min-width: 550px) {
+
+@media screen and (min-width: 600px) {
   #element_user_container {
+    max-width: 480px;
     max-height: 170px;
-    grid-template-columns: 140px 1fr;
+    grid-template-columns: 120px 1fr;
   }
 
   .container-avatar-active {
-    width: 120px;
-    height: 120px;
+    width: 110px;
+    height: 110px;
+  }
+
+  .details {
+    margin-bottom: 10px;
   }
 
   .userName {
     font-size: 1.3rem;
+    margin-left: 5px;
   }
 
   .role {
-    margin-top: 5px;
+    margin-left: 5px;
     font-size: 1rem;
     width: 300px;
   }
+}
+
+.container-avatar-active-inside {
+  width: 140px; 
+  height: 140px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  margin: auto;
 }
