--- a/Frontend/src/components/PagesComponents/Shipment/ShipmentStyle.css
+++ b/Frontend/src/components/PagesComponents/Shipment/ShipmentStyle.css
@@ -1,4 +1,9 @@
-.user_list_ul {
+
+
+/*? Este estilo tiene los mismos nombres que la lista de usuarios y rompe, se tiene que terminar el CRUD y luego usar las etiquetas de todos los componentes, y sus ids para la scalibilidad */
+
+/* 
+ .user_list_ul {
     margin: 20px;
   }
   
@@ -18,7 +23,7 @@
     background-color: #ffffff;
   
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    position: relative; /* Agregar posición relativa para poder posicionar correctamente el pseudo-elemento */
+    position: relative;
   }
   
   .container-avatar-active {
@@ -36,11 +41,11 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    transform: scale(0.95); /* Reducir el tamaño del avatar */
+    transform: scale(0.95); 
   }
   
   .details {
-    grid-area: details; /* Corrección de ortografía */
+    grid-area: details; 
     flex: 1;
     padding: 0 30px;
   }
@@ -84,7 +89,7 @@
   }
   
   .container-avatar-active.inactive {
-    background-color: #ee3933; /* Rojo si el usuario está inactivo */
+    background-color: #ee3933; 
   }
   
   @media screen and (max-width: 500px) {
@@ -178,10 +183,10 @@
 
 
   .container-avatar-active-inside.active {
-    background-color: #5deb5d; /* Verde si el usuario está activo */
+    background-color: #5deb5d;
   }
   
   .container-avatar-active-inside.inactive {
-    background-color: #ee3933; /* Rojo si el usuario está inactivo */
+    background-color: #ee3933; 
   }
-
+ */
