--- a/Frontend/src/components/PagesComponents/User/UserInfoButtonStyle.css
+++ b/Frontend/src/components/PagesComponents/User/UserInfoButtonStyle.css
@@ -1,4 +1,4 @@
-.setting-btn {
+/* .setting-btn {
     width: 45px;
     height: 45px;
     display: flex;
@@ -90,11 +90,11 @@
 
 
   .container-avatar-active-inside.active {
-    background-color: #5deb5d; /* Verde si el usuario está activo */
+    background-color: #5deb5d; 
   }
-  
+
   .container-avatar-active-inside.inactive {
-    background-color: #ee3933; /* Rojo si el usuario está inactivo */
+    background-color: #ee3933;  
   }
 
 
@@ -147,35 +147,5 @@
       transform: translateX(-4px);
     }
   
-    .container-avatar-active-inside {
-      width: 140px; 
-      height: 140px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-      margin: auto;
-    }
-  
-    .avatar-inside {
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      scale: 0.95;
-    }
-  
-    .container-details {
-      text-align: justify;
-      padding: 0 50px;
-    }
-  
-  
-    .container-avatar-active-inside.active {
-      background-color: #5deb5d; /* Verde si el usuario está activo */
-    }
     
-    .container-avatar-active-inside.inactive {
-      background-color: #ee3933; /* Rojo si el usuario está inactivo */
-    }
-  }
+  }  */
