--- a/Frontend/src/components/buttons/Profile/StyleProfileButton.css
+++ b/Frontend/src/components/buttons/Profile/StyleProfileButton.css
@@ -2,17 +2,36 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 52px;
-    height: 52px;
+    width: 50px;
+    height: 50px;
     background-color:  transparent;
     border: none;
-    padding: 15px;
+    padding: 18px;
     cursor: pointer;
     transition: all 0.3s ease;
   }
+
+  
+
   .tab:hover {
-    width: 56px;
-    height: 56px;
-    transition: all 0.3s ease;
+    transform: scale(1.1);
+    transition: all 0.3s;
   }
+
+
+  @media screen and (min-width: 480px) {
+  .tab {
+    width: 54px;
+    height: 54px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .tab {
+    width: 58px;
+    height: 58px;
+  }
+}
+
+  
   
