--- a/Frontend/src/components/NavBar/NavBar.css
+++ b/Frontend/src/components/NavBar/NavBar.css
@@ -8,7 +8,6 @@
 
 .body-wrapper {
   height: 100vh;
-  background-color: #e4e3e8;
   position: relative;
 }
 
@@ -18,8 +17,12 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #14214E;
     transition: width 500ms ease;
+}
+
+.sidebar-header,
+.sidebar-links {
+  background-color: #13214E;
 }
 
 .toggle-btn,
@@ -71,7 +74,8 @@ height: calc(100vh - 70px);
 }
 
 .iconSidebar {
-  scale: 1.3;
+  width: 28px;
+  height: 28px;
   justify-content: start;
   transition: all 0.3s ease;
 }
@@ -93,9 +97,8 @@ height: calc(100vh - 70px);
 
 .sidebar-links {
   flex-direction: column;
-  margin-bottom: auto;
+
   gap: 0.2rem;
-  padding-top: 1.5rem;
 }
 
 .sidebar-links {
@@ -121,15 +124,15 @@ height: calc(100vh - 70px);
 
 .linkPage {
   display: flex;
-  justify-content: star;
+  justify-content: start;
+  align-items: center;
   width: 90%;
   padding: 0.5rem 0.5rem 0.5rem 1rem;
-  margin: 15px 0;
+  margin: 0.5rem 0;
   gap: 1.5rem;
   text-decoration: none;
   color: white;
 }
-
 
 .hidden {
   display: none;
@@ -264,7 +267,6 @@ height: calc(100vh - 70px);
   
     .sidebar-header {
       height: 80px;
-      padding: 40px 0;
       transition: all 0.3s ease;
     }
   
@@ -274,8 +276,8 @@ height: calc(100vh - 70px);
     }
 
     .linkPage > .iconSidebar {
-      width: 24px;
-      height: 24px;
+      width: 28px;
+      height: 28px;
     }
   
     .linkPage {
