--- a/Frontend/src/components/PagesComponents/Profile/ProfileChange.css
+++ b/Frontend/src/components/PagesComponents/Profile/ProfileChange.css
@@ -12,6 +12,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   width: 8rem;
   height: 7rem;
+  cursor: pointer;
 }
 
 #content {
@@ -25,6 +26,5 @@
 }
 
 #incon-setting {
-  color: #14214e;
   padding: 0.5rem;
 }
