--- a/Frontend/src/components/Dashboard/Charts.css
+++ b/Frontend/src/components/Dashboard/Charts.css
@@ -9,12 +9,14 @@
   margin: 5px;
 }
 #sales-charts,
-#product-charts {
+#product-charts,
+#payments-charts {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   width: 100%;
-  height: 170px;
+  height: 200px;
   font-size: 0.9rem;
+  margin-right: 40px;
 }
