--- a/Frontend/src/components/Dashboard/Max.css
+++ b/Frontend/src/components/Dashboard/Max.css
@@ -1,16 +1,17 @@
 .card {
   padding: 1rem;
   background-color: #fff;
-  max-width: 320px;
   border-radius: 16px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   border: 1px solid #323232;
-  width: 500px;
+  width: 300px;
+  height: 150px;
 }
 
 .title {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .title span {
@@ -47,14 +48,17 @@
 .data {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
 }
 
 .data p {
+  display: flex;
+  align-items: center;
   margin-top: 1rem;
   margin-bottom: 1rem;
   color: #1f2937;
-  font-size: 2.25rem;
+  font-size: 2rem;
   line-height: 2.5rem;
   font-weight: 700;
   text-align: left;
@@ -76,4 +80,10 @@
   width: 76%;
   height: 100%;
   border-radius: 0.25rem;
+}
+
+@media screen and (max-width: 480px) {
+  .card {
+    width: 100%;
+  }
 }
